force-app/main/default/objects/Lost_Deal_Analysis__c/Lost_Deal_Analysis__c.object-meta.xml
<CustomObject>
    <label>Lost Deal Analysis</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Lost Deal Analysis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lost Deal Analyses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>