force-app/main/default/objects/Lost_Deal_Analysis__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>Date that this Loan closed with the Lender</description>
    <inlineHelpText>Date that this Loan closed with the Lender</inlineHelpText>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>