force-app/main/default/objects/Lost_Deal_Analysis__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Lost Deal Analyses</relationshipLabel>
    <relationshipName>Lost_Deal_Analyses</relationshipName>
    <type>Lookup</type>
</CustomField>