force-app/main/default/objects/Lost_Deal_Analysis__c/fields/Lender__c.field-meta.xml
<CustomField>
    <fullName>Lender__c</fullName>
    <label>Lender</label>
    <length>200</length>
    <type>Text</type>
</CustomField>