force-app/main/default/objects/Lost_Deal_Analysis__c/fields/Properties_Matched__c.field-meta.xml
<CustomField>
    <fullName>Properties_Matched__c</fullName>
    <description>Number of Properties that match the CoreVest Loan</description>
    <inlineHelpText>Number of Properties that match the CoreVest Loan</inlineHelpText>
    <label>Properties Matched</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>